[package]
name = "ta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
crossterm = "0.26.1"
octocrab = "0.19.0"
ratatui = "0.20.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tempfile = "3.5.0"
tmux_interface = "0.2.1"
tokio = { version = "1", features = ["full"] }
toml = "0.7.2"
unicode-width = "0.1.10"
xdg = "2.4.1"
